--- a/UI/src/styles.scss
+++ b/UI/src/styles.scss
@@ -305,8 +305,8 @@ img {
 }
 
 @keyframes spinAndChangeColor {
-  from {color: #FFDB5C}
-  to {color: yellow;}
+  from {color: #9CF2F6}
+  to {color: #00AAE3;}
   from {
     transform:rotate(0deg);
   }
