--- a/UI/src/app/modules/comparison/components/extent-visualization/extent-visualization.component.html
+++ b/UI/src/app/modules/comparison/components/extent-visualization/extent-visualization.component.html
@@ -1,7 +1,8 @@
-<div *ngIf="!(extentImage$|async)" class="text-center">
-  <span class="pi pi-spinner loading-spinner" title="This component is still loading"></span>
+<div  *ngIf="(loadingSpinner$|async) as spinner" class="text-center">
+  <qa-loading-spinner *ngIf="spinner === 'open'"></qa-loading-spinner>
 </div>
-<div *ngIf="(extentImage$|async) as img" class="p-grid no-gutters">
+
+<div class="p-grid no-gutters">
   <div *ngIf="img == 'Raise message to check box', else noError" class="p-col-12">
     <p-panel>
       <ng-template pTemplate="header">
