--- a/UI/src/app/modules/comparison/components/table-comparison/table-comparison.component.html
+++ b/UI/src/app/modules/comparison/components/table-comparison/table-comparison.component.html
@@ -1,7 +1,7 @@
-<div  *ngIf="(loadingSpinner$|async) as spinner" class="text-center">
-  <qa-loading-spinner *ngIf="spinner === 'open'"></qa-loading-spinner>
+<div *ngIf="showLoadingSpinner" class="text-center">
+  <qa-loading-spinner></qa-loading-spinner>
 </div>
-<div class="p-grid no-gutters">
+<div *ngIf="!showLoadingSpinner" class="p-grid no-gutters">
 <!--<div *ngIf="(comparisonTable$|async) as table" class="p-grid no-gutters">-->
   <div class="p-col-12">
     <p-panel [toggleable]="true" [collapsed]="true">
