Changed back spinner color, fixed syntax bug

--- a/UI/src/app/modules/core/tools/loading-spinner/loading-spinner.component.scss
+++ b/UI/src/app/modules/core/tools/loading-spinner/loading-spinner.component.scss
@@ -1,6 +1,6 @@
 @keyframes spinAndChangeColor {
-  from {color: #FFDB5C}
-  to {color: yellow;}
+  from {color: #9CF2F6}
+  to {color: #00AAE3;}
   from {
     transform:rotate(0deg);
   }
