--- a/UI/src/app/pages/terms/terms.component.html
+++ b/UI/src/app/pages/terms/terms.component.html
@@ -86,6 +86,9 @@
   </ol>
 
   <h1 id="privacy_policy" class="h3 mb-3 font-weight-normal">Privacy Policy</h1>
+    All personal user data are managed in agreement with the EU General Data Protection Regulation (GDPR).
+    The data controller are TU Wien and AWST jointly. User data are kept as long as users have a registered QA4SM account and are deleted when the account is deleted.
+    User data are processed in the following ways and for the following purposes: <br> <br>
   <ol>
     <li>
       <b>Email:</b> On registration, users are asked to provide a valid email address where they can receive
