--- a/UI/src/app/modules/comparison/components/extent-visualization/extent-visualization.component.html
+++ b/UI/src/app/modules/comparison/components/extent-visualization/extent-visualization.component.html
@@ -44,8 +44,8 @@
           <div class="p-pb-3">
             {{ this.intersectionText ?
             "The comparison is performed by considering only the reference grid points that are in the common " +
-            "spatial extent of the two validations, as specified in the 'Spatial extent' dialogue box. To include all " +
-            "points, check the box in the dialogue box." :
+            "spatial extent of the two validations, as specified in the 'Spatial extent' dialogue window. To include all " +
+            "points, check the box in the dialogue window." :
             "The comparison is performed by considering all points belonging to the considered validations (this " +
             "is the only option when the validations belong to the same run, e.g. multiple non-reference datasets)."
             }}
