--- a/UI/src/app/modules/comparison/components/plots/plots.component.html
+++ b/UI/src/app/modules/comparison/components/plots/plots.component.html
@@ -22,6 +22,13 @@
 
       <div class="p-col">
         <div class="p-grid center">
+          <div class="p-pb-3">
+            {{ plots.length == 1 ?
+            "If the validations have overlapping extents, uncheck the box in the 'Spatial extent' dialogue " +
+            "window and re-run the comparison to produce a map plot of the difference of common validation points." :
+            ""
+            }}
+          </div>
           <div *ngFor="let comparisonplot of plots; let ind = index" class='p-col'>
             <img width="95%"
                  height="95%"
