--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
@@ -41,10 +41,10 @@
 
       </span>
 
-      <span *ngIf="!isCopied" class="font-weight-normal"> Started:
+      <span *ngIf="!validationRun.is_a_copy" class="font-weight-normal"> Started:
         {{ validationRun.start_time|date: dateFormat :timeZone }} {{timeZone}}
       </span>
-      <span *ngIf="isCopied" class="font-weight-normal">
+      <span *ngIf="validationRun.is_a_copy" class="font-weight-normal">
         Copied: {{ validationRun.start_time|date: dateFormat :timeZone }} {{timeZone}} <br>
         (Date of original run: {{ originalDate|date: 'mediumDate' :timeZone }})
       </span>
