Fix copying val angular (#286)
* a field storing date of creation an original run added along with migration

* copying validation improved, so it is treated as a brand new validation

* a view added to take information of a copied run; url added

* validation_run model updated, so it uses copied_run field to not original run in relation with the User model

* a method for getting information on copied run added

* validation run row updated to include information of copied run date

* some redundant code removed

* validation summary updated to take into account copied validation information

* copying validation updated, so it adds 'copy_of_' to the original name

* isAuthenticated changed to AllowAny

* tests for get copied validations added

--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
@@ -41,8 +41,12 @@
 
       </span>
 
-      <span class="font-weight-normal"> Started:
+      <span *ngIf="!validationRun.is_a_copy" class="font-weight-normal"> Started:
         {{ validationRun.start_time|date: dateFormat :timeZone }} {{timeZone}}
+      </span>
+      <span *ngIf="validationRun.is_a_copy" class="font-weight-normal">
+        Copied: {{ validationRun.start_time|date: dateFormat :timeZone }} {{timeZone}} <br>
+        (Date of original run: {{ originalDate|date: 'mediumDate' :timeZone }})
       </span>
 
     </h5>
