instead of disabling clear button, setting default coordinates added

--- a/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
+++ b/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
@@ -50,8 +50,7 @@
       <div class="p-d-flex p-jc-center">
         <button pButton type="button" icon="pi pi-trash" pTooltip="Clear coordinates"
                 class="p-button-info p-mr-2" style="padding: 0.2rem;"
-                [disabled]="disableGlobal()"
-                (click)="clearCoordinates()"></button>
+                (click)="clearCoordinatesOrSetDefault()"></button>
       </div>
     </div>
 
