clear button sets default coordinates if available

--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -626,6 +626,7 @@
             $('#id_min_lon').val('');
             $('#id_max_lat').val('');
             $('#id_max_lon').val('');
+            start_ajax_to_set_version_dependent_settings()
         }
 
         function drawBoxFromCoordinates() {
@@ -855,24 +856,18 @@
             max_map_lon = 180
             min_map_lat = -90
             max_map_lat = 90
-            var clearButton =  $('#clear-coordinates')
-            clearButton.attr('disabled', false)
 
             if (params[0] != null){
                 min_map_lon = params[0]
-                clearButton.attr('disabled', true)
             }
             if(params[1] != null){
                 max_map_lon = params[1]
-                clearButton.attr('disabled', true)
             }
             if(params[2] != null){
                 min_map_lat = params[2]
-                clearButton.attr('disabled', true)
             }
             if(params[3] != null){
                 max_map_lat = params[3]
-                clearButton.attr('disabled', true)
             }
             bounds = L.latLngBounds(L.latLng(min_map_lat, min_map_lon), L.latLng(max_map_lat, max_map_lon))
             map.setMaxBounds(bounds);
@@ -891,16 +886,16 @@
             let max_map_lat = map.options.maxBounds._northEast.lat
 
             if (min_map_lon > min_lon_selector.val() || max_map_lon < max_lon_selector.val() || min_map_lat > min_lat_selector.val() || max_map_lat < max_lat_selector.val()){
-                if (min_map_lon > min_lon_selector.val()){
+                if (min_map_lon > min_lon_selector.val() || min_lon_selector.val() == ''){
                     min_lon_selector.val(min_map_lon)
                 }
-                if (max_map_lon < max_lon_selector.val()){
+                if (max_map_lon < max_lon_selector.val() || max_lon_selector.val() == ''){
                     max_lon_selector.val(max_map_lon)
                 }
-                if ( min_map_lat > min_lat_selector.val()){
+                if (min_map_lat > min_lat_selector.val() || min_lat_selector.val() == ''){
                     min_lat_selector.val(min_map_lat)
                 }
-                if (max_map_lat < max_lat_selector.val()){
+                if (max_map_lat < max_lat_selector.val() || max_lat_selector.val() == ''){
                     max_lat_selector.val(max_map_lat)
                 }
 
