esa logo added, target set to blank to open links in a new tab

--- a/validator/templates/validator/index.html
+++ b/validator/templates/validator/index.html
@@ -63,9 +63,10 @@
         <div class="container-marketing">
 
             <div class="overflow">
-                <a href="https://www.awst.at/"><img src="{% static 'images/logo_awst.png' %}"></a>
-                <a href="https://www.geo.tuwien.ac.at/"><img src="{% static 'images/logo_tuwien_geo.png' %}"></a>
-                <a href="https://www.ffg.at/"><img src="{% static 'images/logo_ffg.png' %}"></a>
+                <a href="https://www.awst.at/" target="_blank"><img src="{% static 'images/logo_awst.png' %}"></a>
+                <a href="https://www.geo.tuwien.ac.at/" target="_blank"><img src="{% static 'images/logo_tuwien_geo.png' %}"></a>
+                <a href="https://www.esa.int/" target="_blank"><img src="{% static 'images/logo_esa.png' %}"></a>
+                <a href="https://www.ffg.at/" target="_blank"><img src="{% static 'images/logo_ffg.png' %}"></a>
             </div>
 
             <hr class="featurette-divider">
