information about ESA support added to the about page

--- a/validator/templates/validator/about.html
+++ b/validator/templates/validator/about.html
@@ -14,6 +14,12 @@
         <a href="https://www.ffg.at/en/program/austrian-space-applications-programme-0">Austrian Space Application Programme</a>.
     </p>
 
+    <p align="justify">
+        <a href="https://www.esa.int/"><img id="logo_esa" src="{% static 'images/logo_esa.png' %}"></a>
+        From 2021 on platform development is continued within <a href="https://www.geo.tuwien.ac.at/project-frm4sm/" target="_blank">FRM4SM</a>
+        project, supported by <a href="https://www.esa.int/" target="_blank">The European Space Agency</a>.
+    </p>
+
     <table class="table borderless">
         <tbody>
             <tr>
