--- a/validator/templates/validator/index.html
+++ b/validator/templates/validator/index.html
@@ -84,7 +84,8 @@
                         </ul>
                         The overall aim is to <b>bring together methodologies and protocols</b> used for the validation and quality control of soil moisture data products and provider users with <b>traceable validation results</b>.
                     </p>
-                    <p>QA4SM is supported by the <a href="https://www.ffg.at/en">Austrian Space Application Programme</a>.</p>
+                    <p>QA4SM was created thanks to  support of the <a href="https://www.ffg.at/en" target="_blank">Austrian Space Application Programme</a>.
+                        From 2021 on the application is also supported by <a href="https://www.esa.int/" target="_blank">The European Space Agency</a>.</p>
                 </div>
                 <div class="col-md-5">
 
@@ -148,7 +149,6 @@
         <p class="float-right"><a href="#">Back to top</a></p>
         <p>
             Created by <a href="https://www.geo.tuwien.ac.at/">TU Wien GEO</a> and <a href="https://www.awst.at/">AWST</a>.
-            Hosted on <a href="https://www.eodc.eu/">EODC</a>.
         </p>
     </footer>
 
