information about ESA support added; EODC removed

--- a/validator/templates/validator/terms.html
+++ b/validator/templates/validator/terms.html
@@ -13,7 +13,8 @@
 
     <p>
         The Quality Assurance for Soil Moisture (QA4SM) web service is developed by
-        <a href="https://www.geo.tuwien.ac.at/">TU Wien GEO</a> and <a href="https://www.awst.at/">AWST GmbH</a> with funding from the Austrian Space Applications Programme by <a href="https://www.ffg.at/">FFG</a>. It is hosted on <a href="https://www.eodc.eu/">EODC</a>.
+        <a href="https://www.geo.tuwien.ac.at/">TU Wien GEO</a> and <a href="https://www.awst.at/">AWST GmbH</a> with funding from the Austrian Space Applications Programme by <a href="https://www.ffg.at/">FFG</a>.
+        From 2021 on the application is also supported by <a href="https://www.esa.int/" target="_blank">The European Space Agency</a>.
         It aims to allow its users to validate soil moisture datasets in a traceable, transparent, reproducible and standardised fashion
         and to download the validation results for further use, for example in publications.<br/>
         In order to use the webservice, users must accept and follow the Terms and Conditions below:
@@ -48,10 +49,10 @@
         <li>
             <b>No warranties:</b>
             The results produced by the QA4SM webservice are provided for free and &quot;as is&quot;, i.e. without any warranty
-            as to their condition, consistency or suitability for a particular purpose. Neither TU Wien GEO nor AWST, EODC or the
+            as to their condition, consistency or suitability for a particular purpose. Neither TU Wien GEO nor AWST or the
             individual data providers can be held responsible for any errors or inconsistencies in the results provided by the
             QA4SM web service or for a timely delivery of results. Moreover, they have no obligation whatsoever relating to updates
-            or availailability of the results, data or web service.
+            or availability of the results, data or web service.
         </li>
         <li>
             <b>Termination:</b>
