some improvements done

--- a/validator/templates/validator/index.html
+++ b/validator/templates/validator/index.html
@@ -85,7 +85,7 @@
                         The overall aim is to <b>bring together methodologies and protocols</b> used for the validation and quality control of soil moisture data products and provider users with <b>traceable validation results</b>.
                     </p>
                     <p>QA4SM was created thanks to  support of the <a href="https://www.ffg.at/en" target="_blank">Austrian Space Application Programme</a>.
-                        From 2021 on the application is also supported by <a href="https://www.esa.int/" target="_blank">The European Space Agency</a>.</p>
+                        From 2021 on the application is also supported by the <a href="https://www.esa.int/" target="_blank">European Space Agency</a>.</p>
                 </div>
                 <div class="col-md-5">
 
