--- a/validator/templates/validator/terms.html
+++ b/validator/templates/validator/terms.html
@@ -14,7 +14,7 @@
     <p>
         The Quality Assurance for Soil Moisture (QA4SM) web service is developed by
         <a href="https://www.geo.tuwien.ac.at/">TU Wien GEO</a> and <a href="https://www.awst.at/">AWST GmbH</a> with funding from the Austrian Space Applications Programme by <a href="https://www.ffg.at/">FFG</a>.
-        From 2021 on the application is also supported by <a href="https://www.esa.int/" target="_blank">The European Space Agency</a>.
+        From 2021 on, the application is also supported by the <a href="https://www.esa.int/" target="_blank"> European Space Agency</a>.
         It aims to allow its users to validate soil moisture datasets in a traceable, transparent, reproducible and standardised fashion
         and to download the validation results for further use, for example in publications.<br/>
         In order to use the webservice, users must accept and follow the Terms and Conditions below:
